Fixed
Not Responsive yet.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 .default {
     cursor: default;
+    font-family: IRANSans;
 }
 .flex-container {
     display: flex;
@@ -18,10 +19,10 @@
     background-color: rgb(117, 78, 249);
 }
 header {
-    height: 738.79px;
+    height: 720px;
 }
 #header-text-content {
-    height: 725px;
+    height: 705px;
     background-color: white;
     width: 100%;
 
@@ -46,6 +47,7 @@ header {
     margin-top: 170px;
     margin-bottom: -200px;
     position: relative;
+    margin-left: 5px;
 }
 .rotate {
     transform: rotate(90deg);
@@ -68,10 +70,6 @@ header {
     text-decoration: none;
     cursor: pointer;
     border-radius: 40px;
-}
-
-h1 {
-    margin-right: 30%;
 }
 .socialMedia {
     height: 17px;
@@ -115,7 +113,7 @@ button {
   background: white;
   color: #fff;
   text-transform: uppercase;
-  padding: 20px 30px;
+  padding: 20px 25px;
   border-radius: 5px;
   box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
@@ -126,7 +124,7 @@ button {
   margin-right: 30px;
 }
 button:hover {
-    box-shadow: 0  37px 20px -20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px  37px 20px -20px rgba(0, 0, 0, 0.2);
     transform: translate(0, -10px);
 }
 .button-img {
@@ -136,4 +134,54 @@ button:hover {
 .aDecoration, .aDecoration:hover, .aDecoration:active, .aDecoration:visited, .aDecoration:focus {
     text-decoration: none;
     color: black;
+}
+h1 {
+    position: relative;
+    margin-right: 20%;
+    font-size: 70px;
+    color: rgb(117, 79, 244);
+  }
+  h1::after {
+    position: absolute;
+    top: calc(50% - .5*0.350em);
+    right: 0;
+    width: 270px;
+    height: 0.155em;
+    border-radius: 0.025em 0.025em 0.025em 0.025em;
+    background-color: white;
+    box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.15);
+    content: "";
+  }
+  .over {
+      position: relative;
+      z-index: 1;
+  }
+  span {
+      display: inline-block;
+  }
+
+@media (max-width: 575px) {
+    header {
+        width: auto;
+    }
+}
+@media (max-width: 768px) and (min-width: 576px) {
+    header {
+        width: 540px;
+    }
+}
+@media (max-width: 992px) and (min-width: 769px) {
+    header {
+        width: 720px;
+    }
+}
+@media (max-width: 1200px) and (min-width: 993px) {
+    header {
+        width: 960px;
+    }
+}
+@media (min-width: 1201px) {
+    header {
+        width: 100%;
+    }
 }
